Section#Mail -refactor code to only display random messages in inbox

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,11 @@ div.main-container div.mailboxes-container div.emails-container ul.emails li {
   font-size: 0.9rem;
   border-bottom: solid lightgray 1px;
   margin-bottom: 20px;
+  transition: 0.5s;
+}
+div.main-container div.mailboxes-container div.emails-container ul.emails li:hover {
+  color: darkgray;
+  font-weight: 600;
 }
 div.main-container div.mailboxes-container button.logoutButton {
   position: fixed;
