--- a/src/App.scss
+++ b/src/App.scss
@@ -79,12 +79,34 @@ div.main-container{
                     color: azure;
                     font-weight: normal;
                     font-size: .9rem;
-                    border-bottom: solid lightgray 1px;
+                    border-bottom: solid black 1px;
                     margin-bottom: 20px;
+                    display: flex;
+                    justify-content: space-between;
+                    gap: 10px;
                     transition: .5s;
+                    cursor: pointer;
                     &:hover{
                         color: darkgray;
-                        font-weight: 600;
+                    }
+                    div.crud-options-container{
+                        width: 50px;
+                        margin-left: 40px;
+                        display: inline-flex;
+                        // justify-content: space-between;
+                        justify-content: flex-end;
+                        span.crud-option{
+                            font-size: 1.5rem;
+                            cursor: pointer;
+                            // &.write::before{
+                            //     content: '\01F589';
+                            //     color: $bulma-success;
+                            // }
+                            &.bin::before{
+                                content: '\01F5D1';
+                                color: $bulma-danger;
+                            }
+                        }
                     }
                 }
             }
