--- a/src/mixins/variables.scss
+++ b/src/mixins/variables.scss
@@ -1,3 +1,3 @@
 $active_mailbox-link: darken(azure, 30%);
 $bulma-danger: hsl(348, 100%, 61%);
-$bulma-success: hsl(141, 71%, 48%);
+$bulma-black-ter: hsl(0, 0%, 14%);
