--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,56 @@
 @charset "UTF-8";
+@font-face {
+  font-family: "icomoon";
+  src: url("./scss-fonts/ico-moon/paper-plane/icomoon.eot?hjy7ao");
+  src: url("./scss-fonts/ico-moon/paper-plane/icomoon.eot?hjy7ao#iefix") format("embedded-opentype"), url("./scss-fonts/ico-moon/paper-plane/icomoon.ttf?hjy7ao") format("truetype"), url("./scss-fonts/ico-moon/paper-plane/icomoon.woff?hjy7ao") format("woff"), url("./scss-fonts/ico-moon/paper-plane/icomoon.svg?hjy7ao#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+[class^=icon-], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "icomoon" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-paper-plane-o:before {
+  content: "\e900";
+}
+
+@font-face {
+  font-family: "icomoon";
+  src: url("./scss-fonts/ico-moon/file-o/icomoon.eot?u04hwg");
+  src: url("./scss-fonts/ico-moon/file-o/icomoon.eot?u04hwg#iefix") format("embedded-opentype"), url("./scss-fonts/ico-moon/file-o/icomoon.ttf?u04hwg") format("truetype"), url("./scss-fonts/ico-moon/file-o/icomoon.woff?u04hwg") format("woff"), url("./scss-fonts/ico-moon/file-o/icomoon.svg?u04hwg#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+[class^=icon-], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "icomoon" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-file-o:before {
+  content: "\e905";
+}
+
 div.main-container button.loginToggleButton {
   cursor: pointer;
   width: 100px;
@@ -13,14 +65,14 @@ div.main-container button.loginToggleButton {
 div.main-container button.loginToggleButton:hover {
   background-color: teal;
 }
-div.main-container form {
+div.main-container form#login-form {
   width: 100%;
   margin-top: 30vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-div.main-container form input {
+div.main-container form#login-form input {
   box-sizing: border-box;
   padding: 5px 10px;
   width: 200px;
@@ -76,6 +128,69 @@ div.main-container div.mailboxes-container div.mailboxes ul li#compose:hover {
 }
 div.main-container div.mailboxes-container div.mailboxes ul li#compose span.pencil {
   color: hsl(0, 0%, 14%);
+}
+div.main-container div.mailboxes-container div.emails-container {
+  width: 60%;
+  margin: 0 auto 0 0;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose .form-control {
+  width: 80%;
+  border: none;
+  outline: none;
+  padding: 10px 20px;
+  font-weight: 600;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose .form-control:first-child {
+  margin-top: 30px;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose input {
+  height: 30px;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose textarea {
+  flex-grow: 1;
+  resize: vertical;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button {
+  width: 40%;
+  height: 40px;
+  background-color: hsl(0, 0%, 14%);
+  border: none;
+  outline: none;
+  color: azure;
+  font-weight: 400;
+  font-size: 0.9rem;
+  transition: 0.5s;
+  cursor: pointer;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button.send-email {
+  background-color: #04AA6D;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button.send-email:hover {
+  background-color: #03784d;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button:hover {
+  transform: scale(1.1);
+  color: white;
+  background-color: #303030;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button span.icon-paper-plane-o, div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button span.icon-file-o {
+  font-size: 1.25rem;
 }
 div.main-container div.mailboxes-container div.emails-container ul.emails {
   display: none;
