--- a/src/App.css
+++ b/src/App.css
@@ -99,23 +99,33 @@ div.main-container div.mailboxes-container {
   width: 100%;
   height: 100%;
   margin: 5px;
-  flex-direction: row;
+  margin-bottom: 150px;
+  flex-direction: column;
   gap: 10%;
 }
+@media (min-width: 1220px) {
+  div.main-container div.mailboxes-container {
+    flex-direction: row;
+  }
+}
 div.main-container div.mailboxes-container div.mailboxes {
-  width: 10%;
+  width: 80%;
+  margin: auto;
 }
 div.main-container div.mailboxes-container div.mailboxes ul {
+  display: flex;
+  width: 100%;
   list-style-type: none;
   list-style-position: outside;
   padding-left: 0;
 }
 div.main-container div.mailboxes-container div.mailboxes ul li {
+  box-sizing: border-box;
+  flex-grow: 1;
   height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: 600;
   color: azure;
   transition: 0.5s;
   cursor: pointer;
@@ -129,9 +139,30 @@ div.main-container div.mailboxes-container div.mailboxes ul li#compose:hover {
 div.main-container div.mailboxes-container div.mailboxes ul li#compose span.pencil {
   color: hsl(0, 0%, 14%);
 }
+div.main-container div.mailboxes-container div.mailboxes ul li#bin {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+div.main-container div.mailboxes-container div.mailboxes ul li#bin::before {
+  content: "🗑";
+  color: #b0b0b0;
+}
+@media (min-width: 1220px) {
+  div.main-container div.mailboxes-container div.mailboxes {
+    width: 10%;
+    margin: 0;
+  }
+  div.main-container div.mailboxes-container div.mailboxes ul {
+    flex-direction: column;
+  }
+  div.main-container div.mailboxes-container div.mailboxes ul li {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+}
 div.main-container div.mailboxes-container div.emails-container {
   width: 60%;
-  margin: 0 auto 0 0;
+  margin: 0 auto;
 }
 div.main-container div.mailboxes-container div.emails-container form#emails-compose {
   box-sizing: border-box;
@@ -149,9 +180,16 @@ div.main-container div.mailboxes-container div.emails-container form#emails-comp
   outline: none;
   padding: 10px 20px;
   font-weight: 600;
+  border-radius: 10px;
 }
 div.main-container div.mailboxes-container div.emails-container form#emails-compose .form-control:first-child {
   margin-top: 30px;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose .form-control.text-area {
+  font-weight: normal;
+}
+div.main-container div.mailboxes-container div.emails-container form#emails-compose .form-control:focus {
+  background-color: #f0f0f0;
 }
 div.main-container div.mailboxes-container div.emails-container form#emails-compose input {
   height: 30px;
@@ -159,16 +197,17 @@ div.main-container div.mailboxes-container div.emails-container form#emails-comp
 div.main-container div.mailboxes-container div.emails-container form#emails-compose textarea {
   flex-grow: 1;
   resize: vertical;
+  min-height: 150px;
 }
 div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier {
-  width: 50%;
+  width: 80%;
   display: flex;
-  justify-content: space-between;
-  margin-top: 30px;
+  flex-direction: column;
+  gap: 5px;
 }
 div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button {
-  width: 40%;
-  height: 40px;
+  width: 100%;
+  height: 50px;
   background-color: hsl(0, 0%, 14%);
   border: none;
   outline: none;
@@ -176,6 +215,7 @@ div.main-container div.mailboxes-container div.emails-container form#emails-comp
   font-weight: 400;
   font-size: 0.9rem;
   transition: 0.5s;
+  border-radius: 20px;
   cursor: pointer;
 }
 div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button.send-email {
@@ -191,6 +231,17 @@ div.main-container div.mailboxes-container div.emails-container form#emails-comp
 }
 div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button span.icon-paper-plane-o, div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button span.icon-file-o {
   font-size: 1.25rem;
+}
+@media (min-width: 768px) {
+  div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier {
+    width: 70%;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
+  div.main-container div.mailboxes-container div.emails-container form#emails-compose div.submit-button-contaier button {
+    width: 40%;
+  }
 }
 div.main-container div.mailboxes-container div.emails-container ul.emails {
   display: none;
@@ -222,10 +273,29 @@ div.main-container div.mailboxes-container div.emails-container ul.emails li spa
   content: "🗑";
   color: hsl(348, 100%, 61%);
 }
+@media (min-width: 1220px) {
+  div.main-container div.mailboxes-container div.emails-container {
+    margin: 0 auto 0 0;
+  }
+}
 div.main-container div.mailboxes-container button.logoutButton {
   position: fixed;
-  top: 10px;
-  right: 10px;
+  bottom: 5px;
+  right: calc(50% - 50px);
+  background-color: hsl(348, 100%, 61%);
+  opacity: 0.3;
+  transition: 0.5s;
+}
+div.main-container div.mailboxes-container button.logoutButton:hover {
+  background-color: #ff0537;
+  opacity: 1;
+}
+@media (min-width: 1220px) {
+  div.main-container div.mailboxes-container button.logoutButton {
+    top: 10px;
+    right: 10px;
+    opacity: 0.5;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
