--- a/src/App.scss
+++ b/src/App.scss
@@ -44,20 +44,28 @@ div.main-container{
         width: 100%;
         height: 100%;
         margin: 5px;
-        flex-direction: row;
+        margin-bottom: 150px;
+        flex-direction: column;
         gap: 10%;
+        @media (min-width: 1220px){
+            flex-direction: row;
+        }
         div.mailboxes{
-            width: 10%;
+            width: 80%;
+            margin: auto;
             ul{
+                display: flex;
+                width: 100%;
                 list-style-type: none;
                 list-style-position: outside;
                 padding-left: 0;
                 li{
+                    box-sizing: border-box;
+                    flex-grow: 1;
                     height: 100px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    font-weight: 600;
                     color: azure;
                     transition: .5s;
                     cursor: pointer;
@@ -72,17 +80,35 @@ div.main-container{
                             color: $bulma-black-ter;
                         }
                     }
+                    &#bin{
+                        font-size: 1.5rem;
+                        font-weight: 600;
+                        &::before{
+                            content: '\01F5D1';
+                            color: lighten($bulma-black-ter, 55%);
+                        }
+                    }
+                }
+            }
+            @media (min-width: 1220px){
+                width: 10%;
+                margin: 0;
+                ul{
+                    flex-direction: column;
+                    li{
+                        font-size: 1rem;
+                        font-weight: 600;
+                    }
                 }
             }
         }
         div.emails-container{
             width: 60%;
-            margin: 0 auto 0 0;
+            margin: 0 auto;
             form#emails-compose{
                 box-sizing: border-box;
                 width: 100%;
                 height: 100%;
-                // background: azure;
                 margin-top: 60px;
                 display: flex;
                 flex-direction: column;
@@ -94,8 +120,15 @@ div.main-container{
                     outline: none;
                     padding: 10px 20px;
                     font-weight: 600;
+                    border-radius: 10px;
                     &:first-child{
                         margin-top: 30px;
+                    }
+                    &.text-area{
+                        font-weight: normal;
+                    }
+                    &:focus{
+                        background-color: lighten($bulma-black-ter, 80%);
                     }
                 }
                 input{
@@ -104,15 +137,16 @@ div.main-container{
                 textarea{
                     flex-grow: 1;
                     resize: vertical;
+                    min-height: 150px;
                 }
                 div.submit-button-contaier{
-                    width: 50%;
+                    width: 80%;
                     display: flex;
-                    justify-content: space-between;
-                    margin-top: 30px;
+                    flex-direction: column;
+                    gap: 5px;
                     button{
-                        width: 40%;
-                        height: 40px;
+                        width: 100%;
+                        height: 50px;
                         background-color: $bulma-black-ter;
                         border: none;
                         outline: none;
@@ -120,6 +154,7 @@ div.main-container{
                         font-weight: 400;
                         font-size: .9rem;
                         transition: .5s;
+                        border-radius: 20px;
                         cursor: pointer;
                         &.send-email{
                             background-color: #04AA6D;
@@ -134,6 +169,15 @@ div.main-container{
                         }
                         span.icon-paper-plane-o, span.icon-file-o{
                             font-size: 1.25rem;
+                        }
+                    }
+                    @media (min-width: 768px){
+                        width: 70%;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        margin-top: 30px;
+                        button{
+                            width: 40%;
                         }
                     }
                 }
@@ -168,11 +212,26 @@ div.main-container{
                     }
                 }
             }
+            @media (min-width: 1220px){
+                margin: 0 auto 0 0;
+            }
         }
         button.logoutButton{
             position: fixed;
-            top: 10px;
-            right: 10px;
+            bottom: 5px;
+            right: calc(50% - 50px);
+            background-color: $bulma-danger;
+            opacity: .3;
+            transition: .5s;
+            &:hover{
+                background-color: darken($bulma-danger, 10%);
+                opacity: 1;
+            }
+            @media (min-width: 1220px){
+                top: 10px;
+                right: 10px;
+                opacity: .5;
+            }
         }
     }
 }
