--- a/src/App.css
+++ b/src/App.css
@@ -274,6 +274,16 @@ div.main-container div.mailboxes-container div.emails-container ul.emails li spa
   content: "🗑";
   color: hsl(348, 100%, 61%);
 }
+div.main-container div.mailboxes-container div.emails-container ul.emails#emails-inbox li table tr td {
+  padding-left: 10px;
+}
+div.main-container div.mailboxes-container div.emails-container ul.emails#emails-inbox li table tr td:first-child {
+  padding: 10px 30px 0 5px;
+  background-color: #57ffff;
+  color: hsl(0, 0%, 14%);
+  text-transform: capitalize;
+  font-weight: 600;
+}
 @media (min-width: 1220px) {
   div.main-container div.mailboxes-container div.emails-container {
     margin: 0 auto 0 0;
