--- a/src/App.css
+++ b/src/App.css
@@ -277,6 +277,18 @@ div.main-container div.mailboxes-container div.emails-container ul.emails li spa
 div.main-container div.mailboxes-container div.emails-container ul.emails#emails-inbox li table tr td {
   padding-left: 10px;
 }
+div.main-container div.mailboxes-container div.emails-container ul.emails#emails-inbox li table tr td.lowercase {
+  text-transform: lowercase;
+  font-size: 1rem;
+  font-weight: 600;
+}
+div.main-container div.mailboxes-container div.emails-container ul.emails#emails-inbox li table tr td.subject {
+  text-transform: lowercase;
+  color: darkgrey;
+}
+div.main-container div.mailboxes-container div.emails-container ul.emails#emails-inbox li table tr td:not(.subject) {
+  color: azure;
+}
 div.main-container div.mailboxes-container div.emails-container ul.emails#emails-inbox li table tr td:first-child {
   padding: 10px 30px 0 5px;
   background-color: #57ffff;
