--- a/src/App.css
+++ b/src/App.css
@@ -162,7 +162,7 @@ div.main-container div.mailboxes-container div.mailboxes ul li#bin::after {
   }
 }
 div.main-container div.mailboxes-container div.emails-container {
-  width: 60%;
+  width: 80%;
   margin: 0 auto;
 }
 div.main-container div.mailboxes-container div.emails-container form#emails-compose {
@@ -304,7 +304,8 @@ div.main-container div.mailboxes-container div.emails-container ul.emails#emails
 }
 @media (min-width: 1220px) {
   div.main-container div.mailboxes-container div.emails-container {
-    margin: 0 auto 0 0;
+    width: 60%;
+    margin: 0 0 0 0;
   }
 }
 div.main-container div.mailboxes-container button.logoutButton {
